--- a/projetos/index.html
+++ b/projetos/index.html
@@ -87,7 +87,7 @@
                 </div>
               </div>  
             </div>
-            <div class="card">
+            <div class="card n">
               <div class="card-body">
                 <h5 class="card-title">Easy Portfólio</h5>
                 <p class="card-text">Sistema de Geração de Portfólio Online</p>
@@ -96,7 +96,7 @@
                 </div>
               </div>  
             </div>
-            <div class="card">
+            <div class="card n">
               <div class="card-body">
                 <h5 class="card-title">Lar doce Lar</h5>
                 <p class="card-text">Hub de Funcionalidades Familiar</p>
