Detalhamento Gestão escolar

--- a/projetos/escolabas.html
+++ b/projetos/escolabas.html
@@ -59,43 +59,94 @@
             <a type="button" class="btn-back" href="index.html"></a>
         </div> 
         <div class="cont">
-            <div class="head-project">
-                <h1>Escola Base</h1>
-                <div class="project-status success">
-                    Concluido
+          <div class="head-project">
+              <h1>Escola Base</h1>
+              <div class="project-status success">
+                  Concluido
+              </div>
+          </div>
+          <p><b>Descrição: </b>O Escola Base é um sistema básico de gestão escolar, contendo funcionalidades para administração simplificada. O Escola Base foi desenvolvido como projeto final da disciplina de Orientação a Objetos de ADS.</p>
+          <div class="project-detail">
+              <div>
+                  <h5>Funcionalidades Desenvolvidas:</h5>
+                  <ul>
+                      <li>Controle de Professores e Alunos</li>
+                      <li>Controle de Disciplinas</li>
+                      <li>Controle de Matriculas</li>                        
+                  </ul>
+              </div>
+              <div class="compet-add-container in-project">
+                  <h5>Técnologias que utilizei:</h5>
+                  <div class="compet-add-box">
+                      <div class="compet-add-item">
+                          HTML
+                      </div>
+                      <div class="compet-add-item">
+                          CSS
+                      </div>
+                      <div class="compet-add-item">
+                          Bootstrap
+                      </div>
+                      <div class="compet-add-item">
+                          Javalin - Java
+                      </div>
+                      <div class="compet-add-item">
+                          MySql
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="wrapper-project">
+            <div class="project-example">
+              <h2>Detalhamento:</h2>
+              <div class="example-box">
+                <div class="example-img">
+                  <img class="wrapper-image-project" src="../img/projetos/gestaoEscolar/listdiscpl.png"/>
                 </div>
+                <div class="middle-project"></div>
+                <div class="example-text">
+                  <h3>Listas</h3>
+                  <p>A página inicial de cada módulo é uma lista contendo as informações báscias de cada Disciplina, Professor ou Aluno. Além de contar com as ações que podem ser realizadas: </p>
+                  <ul>
+                    <li>Visualizar</li>
+                    <li>Editar</li>
+                    <li>Deletar</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="example-box invert">
+                <div class="example-img">
+                  <img class="wrapper-image-project" src="../img/projetos/gestaoEscolar/viewdiscipl.png"/>
+                </div>
+                <div class="middle-project"></div>
+                <div class="example-text">
+                  <h3>Visualização</h3>
+                  <p>As telas de visualização permitem a leitura dos dados detalhados de Disciplinas, Professores e Alunos.</p>
+                  <p>Além disso, na tela de visualização de disciplinas, é possivel visualizar os alunos matriculados na disciplina, além de permitir a matrticula de novos alunos e desmatricula.</p>
+                </div>
+              </div>
+              <div class="example-box">
+                <div class="example-img">
+                  <img class="wrapper-image-project" src="../img/projetos/gestaoEscolar/editprofs.png"/>
+                </div>
+                <div class="middle-project"></div>
+                <div class="example-text">
+                  <h3>Edição</h3>
+                  <p>As telas de edição permitem a atualização de registros de Disciplinas, Professores, Alunos e Escola.</p>
+                </div>
+              </div>
+              <div class="example-box invert">
+                <div class="example-img">
+                  <img class="wrapper-image-project" src="../img/projetos/gestaoEscolar/cadsalun.png"/>
+                </div>
+                <div class="middle-project"></div>
+                <div class="example-text">
+                  <h3>Cadastro</h3>
+                  <p>As telas de cadastro permitem a inclusão de novos registros incluindo todas informações de Disciplinas, Professores e Alunos.</p>
+                </div>
+              </div>
             </div>
-            <p><b>Descrição: </b>O Escola Base é um sistema básico de gestão escolar, contendo funcionalidades para administração simplificada. O Escola Base foi desenvolvido como projeto final da disciplina de Orientação a Objetos de ADS.</p>
-            <div class="project-detail">
-                <div>
-                    <h5>Funcionalidades Desenvolvidas:</h5>
-                    <ul>
-                        <li>Controle de Professores e Alunos</li>
-                        <li>Controle de Disciplinas</li>
-                        <li>Controle de Matriculas</li>                        
-                    </ul>
-                </div>
-                <div class="compet-add-container in-project">
-                    <h5>Técnologias que utilizei:</h5>
-                    <div class="compet-add-box">
-                        <div class="compet-add-item">
-                            HTML
-                        </div>
-                        <div class="compet-add-item">
-                            CSS
-                        </div>
-                        <div class="compet-add-item">
-                            Bootstrap
-                        </div>
-                        <div class="compet-add-item">
-                            Javalin - Java
-                        </div>
-                        <div class="compet-add-item">
-                            MySql
-                        </div>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
       </div>
     </div>
