--- a/habilidades/index.html
+++ b/habilidades/index.html
@@ -75,7 +75,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
               </div>
             </div>            
             <div class="hability-card">
@@ -91,8 +91,8 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
+                <div class="hability-box unfill"></div>
               </div>
             </div>            
             <div class="hability-card">
@@ -142,7 +142,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
               </div>
             </div>            
@@ -159,7 +159,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
               </div>
             </div>            
@@ -176,7 +176,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
               </div>
             </div>            
@@ -216,6 +216,23 @@
             </div>            
             <div class="hability-card">
               <div class="title">
+                Design Responsivo
+              </div>
+              <div class="hability-nivel">
+                <div class="hability-box fill"></div>
+                <div class="hability-box fill"></div>
+                <div class="hability-box fill"></div>
+                <div class="hability-box fill"></div>
+                <div class="hability-box fill"></div>
+                <div class="hability-box fill"></div>
+                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
+                <div class="hability-box unfill"></div>
+                <div class="hability-box unfill"></div>
+              </div>
+            </div>            
+            <div class="hability-card">
+              <div class="title">
                 Desenvolvimento Web
               </div>
               <div class="hability-nivel">
@@ -228,7 +245,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
               </div>
             </div>            
             <div class="hability-card">
@@ -242,7 +259,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
@@ -260,8 +277,8 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
+                <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
               </div>
             </div>                                
@@ -299,7 +316,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
               </div>
             </div>  
             <div class="hability-card">
@@ -316,7 +333,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
               </div>
             </div>  
             <div class="hability-card">
@@ -332,8 +349,8 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
+                <div class="hability-box unfill"></div>
               </div>
             </div>  
             <div class="hability-card">
@@ -365,8 +382,8 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
+                <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
               </div>
             </div>  
@@ -400,7 +417,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
               </div>
             </div>  
@@ -417,7 +434,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
               </div>
             </div>  
@@ -433,7 +450,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
               </div>
@@ -450,8 +467,8 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
+                <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
               </div>
             </div>  
@@ -467,9 +484,9 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
+                <div class="hability-box unfill"></div>
+                <div class="hability-box unfill"></div>
               </div>
             </div>  
             <div class="hability-card">
@@ -485,8 +502,8 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
+                <div class="hability-box unfill"></div>
               </div>
             </div>  
             <div class="hability-card">
@@ -502,7 +519,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
               </div>
             </div>  
@@ -519,7 +536,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
               </div>
             </div>  
@@ -553,7 +570,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
               </div>
             </div>  
@@ -589,7 +606,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
               </div>
@@ -624,7 +641,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
               </div>
             </div>
@@ -642,7 +659,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
               </div>
             </div>
             <div class="hability-card">
@@ -692,7 +709,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
               </div>
             </div>
@@ -709,7 +726,7 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
                 <div class="hability-box unfill"></div>
               </div>
             </div>
@@ -726,8 +743,8 @@
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
                 <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
-                <div class="hability-box fill"></div>
+                <div class="hability-box unfill"></div>
+                <div class="hability-box unfill"></div>
               </div>
             </div>
             <div class="hability-card">
